--- a/css/foundation.css
+++ b/css/foundation.css
@@ -28,7 +28,7 @@ body{
 }
 
 /*CSS for header (top navigation bar)*/
-header{
+header-component{
     grid-column: 1/3;
     grid-row: 1/2;
 
@@ -40,7 +40,7 @@ header{
 }
 
 /*CSS for aside (side bar)*/
-aside{
+aside-component{
     grid-column: 1/2;
     grid-row: 2/3;
 
