--- a/css/foundation.css
+++ b/css/foundation.css
@@ -64,7 +64,7 @@ main{
     font-size: 2vw;
 
     /*BACKGROUND COLOR TO SHOW WHERE THIS IS LOCATED ON PAGE*/
-    background-color: yellow;
+    background-color: aqua;
 
 }
 
