--- a/css/foundation.css
+++ b/css/foundation.css
@@ -1,12 +1,17 @@
+/* Added this for styling margin, padding, and box-sizing individually (Francisco) */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+}
 
 /*CSS for html*/
 html {
     height: 100%;
     min-width: 710px;
-
-    margin: 0;
     overflow: auto;
-
+    font-size: 16px;
     font-family: "Tahoma", "Courier New", sans-serif;
 }
 
@@ -14,13 +19,12 @@ html {
 body{
     height:100%;
 
-    margin: 0;
     overflow: auto;
 
     font-family: "Lucida Console", "Courier New", monospace;
 
     display: grid;
-    grid-template-rows: 10vh 90vh;
+    grid-template-rows: 10vh 87vh 3vh;
     grid-template-columns: 1.5fr 8.5fr;
 
     /*BACKGROUND COLOR TO SHOW WHERE THIS IS LOCATED ON PAGE*/
@@ -77,8 +81,6 @@ main{
     grid-template-rows: 1fr 24fr 1fr;
     grid-template-columns: 1fr 19fr 1fr;
 
-    margin: 0;
-    padding: 0;
 }
 
 /*CSS for inner page body (This is the part where all the content is placed)*/
@@ -90,7 +92,6 @@ main{
     flex-direction: column;
     height: fit-content;
 
-    margin: 0;
     padding: 3%;
 
     font-family: "Tahoma", "Courier New", sans-serif;
@@ -99,4 +100,30 @@ main{
     /*BACKGROUND COLOR TO SHOW WHERE THIS IS LOCATED ON PAGE*/
     background-color: white;
 
+}
+
+/* Francisco's footer */
+
+footer {
+    grid-column: 1/3;
+    grid-row: 3/4;
+
+    background-color: rgb(34, 35, 60);
+}
+
+
+footer p {
+    text-align: center;
+    color: gray;
+    position: relative;
+
+}
+
+.fa-github {
+    color: black;
+    background-color: white;
+    size: 2rem;
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
 }
