Fixed the future

--- a/css/past-members.css
+++ b/css/past-members.css
@@ -1,6 +1,13 @@
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 20vw);
-    grid-template-rows: repeat(auto-fill, 20vh);
+    grid-template-columns: repeat(auto-fill, 15vw);
+    grid-template-rows: repeat(auto-fill, 15vh);
+    grid-row-gap: 10vh;
+    grid-column-gap: 5vw;
+    /*padding: 3%;*/
+    justify-content: center;
+    justify-items: center;
+    font-family: "Tahoma", "Courier New", sans-serif;
+    font-size: 1vw;
 
 }
