--- a/css/foundation.css
+++ b/css/foundation.css
@@ -72,6 +72,14 @@ main{
 
 }
 
+/*CSS for footer*/
+footer-component {
+    grid-column: 1/3;
+    grid-row: 3/4;
+
+    background-color: rgb(34, 35, 60);
+}
+
 /*CSS for page-body (contains inner page body; allows a margin to be introduced without buggy scrollbars)*/
 #page-body{
     min-height: 100%;
@@ -104,26 +112,12 @@ main{
 
 /* Francisco's footer */
 
-footer {
-    grid-column: 1/3;
-    grid-row: 3/4;
-
-    background-color: rgb(34, 35, 60);
-}
 
 
+/*
 footer p {
     text-align: center;
     color: gray;
-    position: relative;
 
 }
-
-.fa-github {
-    color: black;
-    background-color: white;
-    size: 2rem;
-    display: inline-block;
-    width: 1rem;
-    height: 1rem;
-}
+*/
