--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,50 +1,118 @@
-
 header-component{
-  background-color: lightgray;
+  background-color: rgb(171, 166, 166); 
+  right:0px;
+  left:0px;
+  position:absolute;
+  height:4.5rem;
   }
   
-  aside-component{
-  background-color:darkgray;
+aside-component{
+  background-color: rgb(149, 143, 143); 
   }
   
   .header-navigation,.aside-navigation{
+    font-family: Arial, Helvetica, sans-serif;
     list-style-type: none;
+    font-size:14px;
     display: flex;
     font-weight: bold;
-    margin:10px;
-    padding:15px;
-    border:5px, solid;
-    color:black;
     text-size-adjust:auto;
-    flex-wrap: wrap;
   }
+  
   
   .header-navigation{
     flex-direction: row;
-    justify-content: space-around;
+    margin:10px;
   }
   
   .club-name{
     background-color: aqua;
-    outline: 2px solid black;
-    outline-offset: 1px; 
+    border: 2px solid black;
+    padding: 5px;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    min-width: 150px;
   }
   
   .aside-navigation {
+    top:25px;
     flex-direction: column;
-    gap: 4rem; 
-    margin-top: 20px;
-    margin-right: auto;
+    padding-left: 0px;
+    position:relative;
   }
   
-  a:link{
+  .nav-item{
+    position:relative;
+    letter-spacing: 1px;
+    top:25px;
+  }
+
+  .aside-navigation .nav-item{
+    padding-bottom:30px;
+    margin-left:10px;
+  }
+ 
+  .header-navigation .nav-item{
+    margin-left:70px; 
+    list-style-type: none; 
+  }
+  
+  .header-navigation .nav-item .sub-nav-items{
+    transform: translateY(27%);
+  }
+
+  .nav-item:hover a{
+    color:aqua;
+  }
+
+  .nav-item:hover .sub-nav-items .sub-item{
+    background-color: aqua;
+    width:125px;
+    border: 2px solid black;
+    padding:2px;
+    color:black;
+  }
+
+  
+  .nav-item:hover .sub-nav-items .sub-item a{
+    color:black;
+  }
+ 
+  .sub-nav-items{
+    list-style-type: none;
+    position:absolute;
+    top:25px;
+    display:none;
+    font-size: 12px;
+  }
+
+  .sub-nav-items li{
+      width:130px;
+      padding-top:10px;
+  }
+
+  .header-navigation .nav-item .sub-nav-items{
+    left:0px;
+    top:25px;
+    padding-left:0px;
+  }
+
+  .nav-item .sub-nav-items .sub-item:hover {
+    background-color: black;
+
+  }
+  .nav-item .sub-nav-items .sub-item:hover a{
+    color:aqua
+  }
+
+  .nav-item:hover .sub-nav-items{ 
+    display:block; 
+  }
+  
+  a:link, a:visited{
     text-decoration: none;
-  }
-  
-  a:visited{
     color:black;
   }
   
-  a:hover{
-    color:aqua;
-  }
