--- a/css/member-pages/ebrink.css
+++ b/css/member-pages/ebrink.css
@@ -1,9 +1,40 @@
 main {
-    background: linear-gradient(to left, #fff, #000);
+    background: linear-gradient(to right, darkgray, lightgray);
+}
+
+.page-body {
+    width: 100%;
+    background: #31493C;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
 }
 
 .inner-page-body {
     background: #31493C;
     color: #E6FAFC;
+    width: 100%;
+    height: 70vh;
+    overflow: scroll;
+    border-radius: 10px;
+}
+
+h1, h2, h3 {
     text-align: center;
+}
+
+h1 {
+    background: rgb(252, 227, 4);
+    color: #000;
+    margin-top: 2vh;
+    border-top: 1vh dashed #000;
+    border-bottom: 1vh dashed #000;
+}
+
+h3 {
+    padding: 2vh;
+}
+
+p {
+    padding: .5vw 4vw;
 }
