styles and filler text

--- a/css/member-pages/ebrink.css
+++ b/css/member-pages/ebrink.css
@@ -4,14 +4,13 @@ main {
 
 .page-body {
     width: 100%;
-    background: #31493C;
+    background: #5f66f6;
     border-radius: 10px;
     display: flex;
     justify-content: center;
 }
 
 .inner-page-body {
-    background: #31493C;
     color: #E6FAFC;
     width: 100%;
     height: 70vh;
