--- a/css/member-pages/ebrink.css
+++ b/css/member-pages/ebrink.css
@@ -12,6 +12,7 @@ main {
 
 .inner-page-body {
     color: #E6FAFC;
+
     width: 100%;
     height: 70vh;
     overflow: scroll;
@@ -20,6 +21,7 @@ main {
 
 h1, h2, h3 {
     text-align: center;
+    font-family: 'Kdam Thmor Pro', sans-serif;
 }
 
 h1 {
@@ -28,12 +30,25 @@ h1 {
     margin-top: 2vh;
     border-top: 1vh dashed #000;
     border-bottom: 1vh dashed #000;
+    font-size: 7vh;
 }
 
 h3 {
     padding: 2vh;
+    font-size: 4vh;
 }
 
 p {
     padding: .5vw 4vw;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 3vh;
+}
+
+#pic-temp {
+    background-color: #E6FAFC;
+    color: #000;
+    width: 20vw;
+    height: 20vw;
+    float: left;
+    margin: 1vw;
 }
