--- a/css/member-pages/ebrink.css
+++ b/css/member-pages/ebrink.css
@@ -1,4 +1,5 @@
 main {
+    width: 100%;
     background: linear-gradient(to right, darkgray, lightgray);
 }
 
@@ -9,13 +10,15 @@ main {
 }
 
 .inner-page-body {
+    box-sizing: border-box;
     color: #E6FAFC;
     width: 100%;
     height: 80vh;
     border-radius: 10px;
+    padding: 0vh 0vh 0vh 2vh;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-columns: auto;
+    grid-template-rows: auto;
     grid-template-areas: 
     "banner banner banner banner"
     "text text text projects"
@@ -30,28 +33,27 @@ h1, h2, h3 {
 }
 
 h1 {
-    margin-top: 2vh;
     font-size: 7vh;
 }
 
 h3 {
-    padding: 2vh;
-    font-size: 4vh;
+    font-size: 5vh;
+    text-align: left;
 }
 
 p {
-    padding: .5vw 4vw;
+    padding: .5vw 0vw;
     font-family: 'Noto Sans', sans-serif;
     font-size: 3vh;
 }
 
 #pic-temp {
-    background-color: #E6FAFC;
+    background: linear-gradient(to right, darkgray, lightgray);
     color: #000;
     width: 20vw;
     height: 20vw;
     float: left;
-    margin: 2vw 2vw 2vw 4vw;
+    margin: 2vh 2vh 0vh 0vh;
 }
 
 #projects li {
@@ -66,6 +68,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
 #projects li a {
@@ -85,4 +88,26 @@ p {
 #text {
     grid-area: text;
     overflow: scroll;
+}
+
+#text a {
+    display: inline-block;
+    padding: .75vw;
+    text-decoration: none;
+    border-radius: 10px;
+    background-color: #E6FAFC;
+    justify-content: center;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    margin: .5vh .2vw 0 0;
+    font-size: 2.5vh;
+    font-family: 'Kdam Thmor Pro', sans-serif;
+}
+
+#text a:hover {
+    color: #F5EE9E;
+    background: rgb(227, 96, 96);
+}
+
+#top, #one, #two, #three, #four, #five, #six {
+    visibility: hidden;
 }
