--- a/css/foundation.css
+++ b/css/foundation.css
@@ -39,7 +39,7 @@ header-component{
     font-size: 2vw;
 
     /*BACKGROUND COLOR TO SHOW WHERE THIS IS LOCATED ON PAGE*/
-    background-color: pink;
+    background-color: #004da8;
 }
 
 /*CSS for aside (side bar)*/
@@ -75,7 +75,7 @@ main{
     font-size: 2vw;
 
     /*BACKGROUND COLOR TO SHOW WHERE THIS IS LOCATED ON PAGE*/
-    background-color: aqua;
+    background-color: #004da8;
 
 }
 
