--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,12 +1,17 @@
 header-component {
-  background-color: rgb(171, 166, 166);
+  display: grid;
+  background-color: #004da8;
   right: 0px;
   left: 0px;
-  height: 200px !important;
+  aligin-self: center;
+  min-height: 100px !important;
+  border: black solid 2px;
+
 }
 
 aside-component {
-  background-color: rgb(149, 143, 143);
+  background-color: #ffc628;
+  border: black solid 2px;
 }
 
 .header-navigation,
@@ -39,10 +44,11 @@ nav {
 
 .club-name {
   margin-left: 0;
-  background-color: aqua;
-  border: 2px solid black;
+  background-color: #004da8;
+  border: 2px solid white;
   padding: 5px;
   text-transform: uppercase;
+  color: white;
   font-size: 12px;
   letter-spacing: 1px;
   word-spacing: 2px;
@@ -81,15 +87,14 @@ nav {
 }
 
 .nav-item:hover a {
-  color: aqua;
+  color: #004da8;
 }
 
 .nav-item:hover .sub-nav-items .sub-item {
-  background-color: aqua;
+  background-color: #004da8;
   width: 125px;
   border: 2px solid black;
   padding: 2px;
-  color: black;
 }
 
 
@@ -122,7 +127,7 @@ nav {
 }
 
 .nav-item .sub-nav-items .sub-item:hover a {
-  color: aqua
+  color: #004da8
 }
 
 .nav-item:hover .sub-nav-items {
@@ -132,5 +137,5 @@ nav {
 a:link,
 a:visited {
   text-decoration: none;
-  color: black;
+  color: white;
 }
