--- a/css/member-pages/ebrink.css
+++ b/css/member-pages/ebrink.css
@@ -20,7 +20,7 @@ main {
     grid-template-columns: 3fr 1fr;
     grid-template-rows: auto;
     grid-template-areas: 
-    "banner banner banner banner"
+    "text text text projects"
     "text text text projects"
     "text text text projects"
     "text text text projects"
@@ -127,4 +127,35 @@ p {
 
 a:visited {
     color: rgb(55, 53, 53);
+}
+
+@media (max-width: 500px) {
+    #pic-temp {
+        float: none;
+        width: 60vw;
+        height: 60vw;
+        margin: auto;
+    }
+
+    #projects {
+        display: none;
+    }
+
+    .inner-page-body {
+        box-sizing: border-box;
+        color: #E6FAFC;
+        width: 100%;
+        height: 80vh;
+        border-radius: 10px;
+        padding: 0vh 0vh 0vh 2vh;
+        display: grid;
+        grid-template-columns: 3fr;
+        grid-template-rows: auto;
+        grid-template-areas: 
+        "text text text"
+        "text text text"
+        "text text text"
+        "text text text"
+        ;
+    }
 }
