finished organised files and folders
links updated: foundation.css and navigation.css were merged together in style.css.

- style.css is a global css
- app.js is a global js

Also, I changed home.html filename for index.html. href and links were also updated.

cheers - fran

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header-component {
   background-color: pink;
 }
 
-/* Below is from foundation.css */
+/* Below was from foundation.css */
 
 aside-component {
   grid-column: 1/2;
@@ -106,7 +106,7 @@ main {
   background-color: white;
 }
 
-/* Below is from navigation.css */
+/* Below was from navigation.css */
 
 header-component {
   background-color: lightgray;
