--- a/css/member-pages/Evelyn.css
+++ b/css/member-pages/Evelyn.css
@@ -12,8 +12,8 @@ img {
     width:27%; 
     object-fit: cover;
     border-radius: 100%;
-    float: right;
-    margin-left: 8%;
+    /*float: right;*/
+    /*margin-left: 8%;*/
 }
 article {
     margin: 5px;
@@ -22,7 +22,7 @@ article {
     padding: 10px;
     background: rgba(255, 255, 255, 0.479);
 }
-li {
+#page-body li {
     margin-left: 30px;
 }
 
